--- a/src/style/content.css
+++ b/src/style/content.css
@@ -56,3 +56,11 @@
   position: absolute;
   content: "";
 }
+
+.th-tooltip-data {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75em;
+  justify-items: center;
+  align-items: center;
+}
